objects/Calculator__c.object
<CustomObject>
    <fields>
        <fullName>Destructive_Field_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Destructive Field Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Test_Rel_1__c</fullName>
        <label>Field Test Rel 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Test_Rel_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Test Rel 2</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>